Adding 2 plugins and 1 UI widget Jquery

--- a/MissedConnections.html
+++ b/MissedConnections.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Missed Connections - Cosmic Classifieds</title>
     <link rel="stylesheet" href="MissedConnections-style.css">
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 <body>
     <header>
@@ -67,6 +71,13 @@
             </div>
         </div>
     </main>
+
+    <div id="dialog-container"> <!-- Dialogue container for jquery-->
+        <div id="dialog" title="Error">
+            <p>Please fill out all required fields.</p>
+        </div>
+    </div>
+    
     <!-- footer -->
     <footer class="footer">
         <p id="copyright">&copy; 2024 Zoll</p>
