before adding cycle2 code into js file

--- a/ItemsForSale.html
+++ b/ItemsForSale.html
@@ -94,9 +94,10 @@
         <a href="https://jigsaw.w3.org/css-validator/" class="footer-item">Validate CSS</a>
     </footer>
     <script src="ItemsForSale-script.js"></script> <!-- javascript link-->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> <!-- Jquery library -->
     <script src="jquery.zoom.js"></script> <!-- jquery zoom link-->
-    <script src="jquery.noty.js"></script> <!-- jquery noty link-->
+    <script src="https://malsup.github.io/jquery.cycle2.js"></script> <!-- jquery cycle2 link-->
+
     
 </body>
 </html>
