--- a/MissedConnections.html
+++ b/MissedConnections.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Missed Connections - Cosmic Classifieds</title>
     <link rel="stylesheet" href="MissedConnections-style.css">
-
-
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 <body>
     <header>
@@ -86,5 +82,7 @@
         <a href="https://jigsaw.w3.org/css-validator/" class="footer-item">Validate CSS</a>
     </footer>
     <script src="MissedConnections-script.js"></script> <!-- javascript link -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script> <!-- Jquery library -->
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script> <!-- Jquery UI library -->
 </body>
 </html>
