--- a/JobPostings.html
+++ b/JobPostings.html
@@ -76,7 +76,7 @@
     </footer>
     <script src="JobPostings-script.js"></script> <!-- javascript link -->
     
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Include jQuery (required) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>   <!-- Include Toastr JS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- jQuery library-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>   <!-- Toastr Jquery Plugin -->
 </body>
 </html>
