fixed css CDN for toastr for job posting page by making it its own file instead of a CDN

--- a/JobPostings.html
+++ b/JobPostings.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Postings - Cosmic Classifieds</title>
     <link rel="stylesheet" href="JobPostings-style.css">
-    <!-- Toastr CSS CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <!-- Toastr CSS link -->
+    <link rel="stylesheet" href="JobPostings-style-toastr.css">
 </head>
 <body>
     <header>
