--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </section>
         <!-- Section for page links and associated pictures -->
         <section class="page-blocks">
+            <h2 id="hiddenH2">page blocks</h2>
             <div class="page-block">
                 <a href="JobPostings.html">
                     <p>Job Postings</p>
