added accessability aria-current to nav bar current pages

--- a/ItemsForSale.html
+++ b/ItemsForSale.html
@@ -12,7 +12,7 @@
         <nav class="navigation-bar">
             <a href="index.html" class="nav-link">Home</a>
             <a href="JobPostings.html" class="nav-link">Job Postings</a>
-            <a href="ItemsForSale.html" class="active nav-link">Items For Sale</a>
+            <a href="ItemsForSale.html" aria-current="page" class="active nav-link">Items For Sale</a>
             <a href="MissedConnections.html" class="nav-link">Missed Connections</a>
             <a href="ContactUs.html" class="nav-link">Contact Us</a>
         </nav>
