--- a/JobPostings.html
+++ b/JobPostings.html
@@ -13,7 +13,7 @@
         <!-- Navigation bar for the website -->
         <nav class="navigation-bar">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="JobPostings.html" class="active nav-link">Job Postings</a>
+            <a href="JobPostings.html" aria-current="page" class="active nav-link">Job Postings</a>
             <a href="ItemsForSale.html" class="nav-link">Items For Sale</a>
             <a href="MissedConnections.html" class="nav-link">Missed Connections</a>
             <a href="ContactUs.html" class="nav-link">Contact Us</a>
