--- a/MissedConnections.html
+++ b/MissedConnections.html
@@ -13,7 +13,7 @@
             <a href="index.html" class="nav-link">Home</a>
             <a href="JobPostings.html" class="nav-link">Job Postings</a>
             <a href="ItemsForSale.html" class="nav-link">Items For Sale</a>
-            <a href="MissedConnections.html" class="active nav-link">Missed Connections</a>
+            <a href="MissedConnections.html" aria-current="page" class="active nav-link">Missed Connections</a>
             <a href="ContactUs.html" class="nav-link">Contact Us</a>
         </nav>
     </header>
