--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <!-- Navigation bar for the website -->
         <nav class="navigation-bar">
-                <a href="index.html" class="active nav-link">Home</a>
+                <a href="index.html" aria-current="page" class="active nav-link">Home</a>
                 <a href="JobPostings.html" class="nav-link">Job Postings</a>
                 <a href="ItemsForSale.html" class="nav-link">Items For Sale</a>
                 <a href="MissedConnections.html" class="nav-link">Missed Connections</a>
