--- a/ContactUs.html
+++ b/ContactUs.html
@@ -14,7 +14,7 @@
             <a href="JobPostings.html" class="nav-link">Job Postings</a>
             <a href="ItemsForSale.html" class="nav-link">Items For Sale</a>
             <a href="MissedConnections.html" class="nav-link">Missed Connections</a>
-            <a href="ContactUs.html" class="active nav-link">Contact Us</a>
+            <a href="ContactUs.html" aria-current="page" class="active nav-link">Contact Us</a>
         </nav>
     </header>
     <main>
