added roles for accessability for certain divs that were unclear

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -22,7 +22,7 @@
         <!-- flex container -->
         <div class="flex-container">
             <!-- div for contact form -->
-            <div class="contact-us">
+            <div class="contact-us" role="form">
                 <h2>Contact Us</h2>
                     <form action="mailto:nzoll@uncc.edu" method="post" id="contact-form" enctype="text/plain"> <!-- sends user's message to my email -->
                         <label for="name">Name:</label>
@@ -38,7 +38,7 @@
                     </form>
             </div>
             <!-- div for decorative picture on page -->
-            <div class="contact-picture">
+            <div class="contact-picture" role="img">
                 <img src="ContactUs3Image.jpg" alt="Contact Us Alien Picture" title="Alien Employee Picture">
             </div>
         </div>
