--- a/ItemsForSale.html
+++ b/ItemsForSale.html
@@ -21,11 +21,11 @@
         <!-- Flex Container for Flex layout -->
         <div class="flex-container">
             <!-- div for item grid style posts -->
-            <div class="item-grid">
+            <div class="item-grid" role="feed">
                 <!--posts will be dynamically added here -->
             </div>
             <!-- div for creating item-for-sale posts form -->
-            <div class="item-posting-form">
+            <div class="item-posting-form" role="form">
                 <h1>Create a New Item Listing</h1>
                 <form id="new-item-form" action="#">
                     <label for="item-title">Item Title:</label>
