--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <!-- Welcome section -->
         <section>
-            <div class="welcome">
+            <div class="welcome" role="definition">
                 <h1>Cosmic Classifieds</h1>
                 <p>
                     Welcome to Cosmic Classifieds! An intergalactic site that lets you find jobs, items for sale, and missed connections!<br>
@@ -32,7 +32,7 @@
             </div>
         </section>
         <!-- Section for page links and associated pictures -->
-        <section class="page-blocks">
+        <section class="page-blocks" role="navigation">
             <h2 id="hiddenH2">page blocks</h2>
             <div class="page-block">
                 <a href="JobPostings.html">
