--- a/MissedConnections.html
+++ b/MissedConnections.html
@@ -21,7 +21,7 @@
         <!-- Flex Container for Flex layout -->
         <div class="flex-container">
             <!-- div for the posts on the page, ms abbreviated for missed connections-->
-            <div class="ms-posts">
+            <div class="ms-posts" role="feed">
                 <div class="ms-post"> <!-- example post-->
                     <h3>Looking for alien named Bibblar</h3>
                     <p>I met this peculiar looking alien at a gas station on Mars. All that he would say is, "Find Bibblar". Looking to find any more information about this critter. Thanks</p>
@@ -45,7 +45,7 @@
                 <!-- User missed connection postings will be dynamically added here -->
             </div>
             <!-- div for the form to create posts on the page -->
-            <div class="ms-form">
+            <div class="ms-form" role="form">
                 <h1>Create a New Missed Connection Listing</h1>
                 <form id="new-ms-form" action="#">
                     <label for="ms-title">Alien Name:</label>
@@ -60,7 +60,7 @@
                     <button type="submit" name="createMSPost" >Post Item</button> <!-- Submission button -->
                 </form>
                 <!-- div for the search feature on the page-->
-                <div class="searchbar-container">
+                <div class="searchbar-container" role="form">
                     <label for="searchbar">Search by Alien Name:</label>
                     <input id="searchbar" type="text" name="search" placeholder="Search Alien Name..">
                 </div>
@@ -68,7 +68,7 @@
         </div>
     </main>
 
-    <div id="dialog-container"> <!-- Dialogue container for jquery-->
+    <div id="dialog-container" role="alert"> <!-- Dialogue container for jquery-->
         <div id="dialog" title="Error">
             <p>Please fill out all required fields.</p>
         </div>
