april 30th fixed weird errors with photo gallery and dialog box

--- a/MissedConnections.html
+++ b/MissedConnections.html
@@ -57,7 +57,7 @@
                     <label for="ms-image-url">Image URL:</label>
                     <input type="text" id="ms-image-url" name="ms-image-url">                    
 
-                    <button type="submit" name="createMSPost" >Post Item</button> <!-- Submission button -->
+                    <button type="button" name="createMSPost" >Post Item</button> <!-- Submission button -->
                 </form>
                 <!-- div for the search feature on the page-->
                 <div class="searchbar-container" role="form">
