slightly altered descriptions for example posts

--- a/MissedConnections.html
+++ b/MissedConnections.html
@@ -23,23 +23,23 @@
             <!-- div for the posts on the page, ms abbreviated for missed connections-->
             <div class="ms-posts" role="feed">
                 <div class="ms-post"> <!-- example post-->
-                    <h3>Looking for alien named Bibblar</h3>
-                    <p>I met this peculiar looking alien at a gas station on Mars. All that he would say is, "Find Bibblar". Looking to find any more information about this critter. Thanks</p>
+                    <h3>Looking for alien named Fred</h3>
+                    <p>I met this peculiar looking alien at a gas station on Mars. Looking to find any more information about this them. Thanks</p>
                     <img src="AlienMissed1.jpg" alt="Example Item Image">
                 </div>
                 <div class="ms-post">
-                    <h3>Looking for blue Spaceworm named John</h3>
-                    <p>Looking for a Spaceworm that goes by John, similar to the photo attached. We met in a Plutonian Starbucks on 5th Avenue. I told you to get a haircut.</p>
+                    <h3>Looking for blue Spaceworm</h3>
+                    <p>Looking for a Spaceworm that goes by John, similar to the photo attached. We met in a Plutonian Starbucks on 5th Avenue.</p>
                     <img src="AlienMissed2.png" alt="Example Item Image">
                 </div>
                 <div class="ms-post">
                     <h3>Looking for friends</h3>
-                    <p>Greebo Krinklor is looking for friends. Greebo Krinklor likes to travel, watch sports, and heavy metal music. Greebo is looking forward to meeting you. </p>
+                    <p>I like to travel, watch sports, and listen to heavy metal music. </p>
                     <img src="AlienMissed3.jpg" alt="Example Item Image">
                 </div>
                 <div class="ms-post">
                     <h3>Intergalactic dance group looking for new members</h3>
-                    <p>Newly founded interpretive dance group located on Neptune. Anyone can join! We meet Thursdays and stop by the Pizza Hut on Meteorite R-15 afterwards.</p>
+                    <p>Newly founded interpretive dance group located on Neptune. Anyone can join! We meet Thursdays and stop by the pizza place on Meteorite R-15 afterwards.</p>
                     <img src="AlienMissed4.jpg" alt="Example Item Image">
                 </div>
                 <!-- User missed connection postings will be dynamically added here -->
